Added content for initial home page.

--- a/system/user/templates/default_site/home.group/index.html
+++ b/system/user/templates/default_site/home.group/index.html
@@ -1,1 +1,39 @@
-Hello world.
+<!DOCTYPE html>
+<html>
+<head>
+    <title>The Striven Word</title>
+</head>
+    <body>
+        <header>
+            <h1>The Striven Word</h1>
+        </header>
+        <main class="wrapper">
+            <div class="design-module">
+                {!-- output SVG for one of the logos goes here, potentially with CSS transformations --}
+            </div>
+            <ol>
+                <li>Web Journal</li>
+                <li>Esperanto Medium Blog</li>
+                <li class="list-divider">Review Blog</li>
+                <li>Hive</li>
+                <li>LinkedIn</li>
+                <li>Tumblr</li>
+                <li class="list-divider">Twitter</li>
+                <li>Adobe Stock</li>
+                <li>Pixabay</li>
+                <li>Open Clip Art</li>
+            </ol>
+        </main>
+        <footer>
+            <div class="design-module">
+                {!-- output SVG for Reformanda logo --}
+            </div>
+            <div class="content-module">
+                <p>soli Deo gloria</p>
+            </div>
+            <div class="content-module">
+                <p>last modified {!-- date page was last modified --}</p>
+            </div>
+        </footer>
+    </body>
+</html>
