--- a/system/user/templates/default_site/home.group/index.html
+++ b/system/user/templates/default_site/home.group/index.html
@@ -1,51 +1,45 @@
 
 <!DOCTYPE html>
 <html>
-<style>
-	main {
-		background-color: green;
-{exp:channel:entries channel="canvas" entry_id="1"}
-		background-image: url("{canvas_page_bg}");
-{/exp:channel:entries}
-	}
-</style>
+
 <head>
     <title>The Striven Word</title>
+	<meta charset="utf-8" />
+    <link rel="stylesheet" href="css/css.css" />
 </head>
-    <body>
-        <header>
-            <h1>The Striven Word</h1>
-        </header>
-        <main class="wrapper">
-            <div class="design-module">
-                {!-- output SVG for one of the logos goes here, potentially with CSS transformations --}
-{exp:channel:entries channel="canvas" entry_id="1"}
-				<img src="{canvas_page_bg}" alt="background image of a watercolor-painted forest" />
-{/exp:channel:entries}
-            </div>
-            <ol>
-                <li>Web Journal</li>
-                <li>Esperanto Medium Blog</li>
-                <li class="list-divider">Review Blog</li>
-                <li>Hive</li>
-                <li>LinkedIn</li>
-                <li>Tumblr</li>
-                <li class="list-divider">Twitter</li>
-                <li>Adobe Stock</li>
-                <li>Pixabay</li>
-                <li>Open Clip Art</li>
-            </ol>
-        </main>
-        <footer>
-            <div class="design-module">
-                {!-- output SVG for Reformanda logo --}
-            </div>
-            <div class="content-module">
-                <p>soli Deo gloria</p>
-            </div>
-            <div class="content-module">
-                <p>last modified {!-- date page was last modified --}</p>
-            </div>
-        </footer>
+    <body class="page-canvas">
+		<div id="universal">		
+			<header>
+				<h1>The Striven Word</h1>
+			</header>
+			<main class="wrapper">
+				<div class="content-module">
+                    <ul>
+                        <li><a href="#">Web Journal</a></li>
+                        <li><a href="#">Esperanto Medium Blog</a></li>
+                        <li><a href="#" class="list-divider">Review Blog</a></li>
+                        <li><a href="#">Hive</a></li>
+                        <li><a href="#">LinkedIn</a></li>
+                        <li><a href="#">Tumblr</a></li>
+                        <li><a href="#" class="list-divider">Twitter</a></li>
+                        <li><a href="#">Adobe Stock</a></li>
+                        <li><a href="#">Pixabay</a></li>
+                        <li><a href="#">Open Clip Art</a></li>
+                    </ul>
+                </div>
+			</main>
+			<footer>
+                <div class="design-module">
+                    <img src="img/reformanda-smoothed_black.svg" width="175px" alt="Reformanda logo" class="widget-pic" />
+                </div>
+                <div class="content-module">
+                    <p>soli Deo gloria</p>
+                </div>
+                <div class="content-module">
+                    <p>last modified 1/19/2070</p>
+                </div>
+            </footer>
+		</div>
     </body>
+
 </html>
