Made the surrounding page code part of a 'canvas' layout, with the link list now being the content for the home page.

--- a/system/user/templates/default_site/home.group/index.html
+++ b/system/user/templates/default_site/home.group/index.html
@@ -1,32 +1,16 @@
+{layout="canvas/page_bg-image-centered-content"}
 
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>The Striven Word</title>
-	<meta charset="utf-8" />
-    <link rel="stylesheet" href="css/css.css" />
-</head>
-    <body class="page-canvas">
-		<div id="universal">		
-			<header>
-				<h1>The Striven Word</h1>
-			</header>
-			<main class="wrapper">
-				{embed="modules/linklist"}
-			</main>
-			<footer>
-                <div class="design-module">
-                    <img src="img/reformanda-smoothed_black.svg" width="175px" alt="Reformanda logo" class="widget-pic" />
-                </div>
-                <div class="content-module">
-                    <p>soli Deo gloria</p>
-                </div>
-                <div class="content-module">
-                    <p>last modified 1/19/2070</p>
-                </div>
-            </footer>
-		</div>
-    </body>
-
-</html>
+<div class="content-module">
+	<ul>
+		<li><a href="#">Web Journal</a></li>
+		<li><a href="#">Esperanto Medium Blog</a></li>
+		<li><a href="#" class="list-divider">Review Blog</a></li>
+		<li><a href="#">Hive</a></li>
+		<li><a href="#">LinkedIn</a></li>
+		<li><a href="#">Tumblr</a></li>
+		<li><a href="#" class="list-divider">Twitter</a></li>
+		<li><a href="#">Adobe Stock</a></li>
+		<li><a href="#">Pixabay</a></li>
+		<li><a href="#">Open Clip Art</a></li>
+	</ul>
+</div>
