Moved static assets to the proper directory near the base of the EE installation. The stylesheet and static images are now correctly being rendered in the template.

--- a/system/user/templates/default_site/canvas.group/page_bg-image-centered-content.html
+++ b/system/user/templates/default_site/canvas.group/page_bg-image-centered-content.html
@@ -4,7 +4,7 @@
 <head>
     <title>The Striven Word</title>
 	<meta charset="utf-8" />
-    <link rel="stylesheet" href="css/css.css" />
+    <link rel="stylesheet" href="assets/css/css.css" />
 </head>
     <body class="page-canvas">
 		<div id="universal">		
