Added a site variable to output the last modified date. Could be done with PHP, but this will probably how it will be done until the end of time.

--- a/system/user/templates/default_site/canvas.group/page_bg-image-centered-content.html
+++ b/system/user/templates/default_site/canvas.group/page_bg-image-centered-content.html
@@ -22,7 +22,7 @@
                     <p>soli Deo gloria</p>
                 </div>
                 <div class="content-module">
-                    <p>last modified 1/19/2070</p>
+                    <p>last modified: {var_date-last-modified}</p>
                 </div>
             </footer>
 		</div>
